<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Coins</string>
    <string name="main_title">Coins</string>
    <string name="jump_today_caption">Jump to today</string>
    <string name="jump_year_caption">Jump to Year</string>
    <string name="logout_caption">Logout</string>
    <string name="list_empty_hint">Tap the "+" button add stuff</string>
    <string name="totals_hint_string">Tap for monthly insights</string>
    <string name="list_empty_message">Nothing here, so lonely</string>
    <string name="list_empty_templates">You don\'t have any favorites…</string>
    <string name="list_category_empty_templates">No category found matching…</string>
    <string name="new_expense_button_caption">Add</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_password_not_match">Password does not match</string>
    <string name="error_field_required">This field is required</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="action_sign_in">Sign In</string>
    <string name="new_password_change_button_text">Change</string>
    <string name="month_pick_button_text">Pick</string>
    <string name="action_sing_up">Sign Up</string>
    <string name="action_forgot_pass">Forgot Password</string>
    <string name="action_update_account">Update</string>
    <string name="Email">Email</string>
    <string name="change_email_button_text">Change Username</string>
    <string name="change_pick_month_button_text">Pick a Month</string>
    <string name="change_username_hint">New Username</string>
    <string name="reset_password_hint">Enter Username</string>
    <string name="reset_password_button">Reset Password</string>
    <string name="account_delete_button_text">Delete</string>
    <string name="year_picker_ok">Jump to Year</string>
    <string name="change_password_button_text">Change Password</string>
    <string name="new_password_hint">New Password</string>
    <string name="new_password_repeat_hint">Verify Password</string>
    <string name="password_hint">Password</string>
    <string name="verify_pass_hint">Verify Password</string>
    <string name="title_activity_create_expense">Transaction</string>
    <string name="title_activity_image_picker">Category</string>
    <string name="login_welcome">Welcome!</string>
    <string name="login_welcome_2nd_line">Save some Coins</string>
    <string name="signup_welcome">Some info that we\'ll know you in the future</string>
    <string name="account_hint">Update us on any account changes</string>
    <string name="image_picker_hint_text">Select category</string>
    <string name="wallet_icon_hint_text">Select wallet icon</string>
    <string name="toggle_hint_text">Tap to change</string>
    <string name="checkbox_template_hint_text">Tap to save for future use</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="item_details_submit">"Done"</string>
    <string name="tutorial_finish">"Finish"</string>
    <string name="tutorial_exit">"Exit"</string>
    <string name="item_details_cancel">"Cancel"</string>
    <string name="item_list_refresh">"Refresh"</string>
    <string name="item_list_edit">"Edit"</string>
    <string name="item_list_delete">"Delete"</string>
    <string name="item_details_save">"Save"</string>
    <string name="image_gallery_hint">"Tap the category image to pick one"</string>
    <string name="splash_slogan">"Save some Coins"</string>
    <string name="splash_first_time_title">"Welcome to Coins !"</string>
    <string name="splash_first_time_body">"Add some stuff and start saving"</string>
    <string name="splash_slogan_under">"by ZonnieApps"</string>
    <string name="default_currency">"$"</string>
    <string name="init_total_value">"0"</string>
    <string name="add_item_description_hint">"What\'s this ?"</string>
    <string name="wallet_description_hint">"What\'s in this ?"</string>
    <string name="item_value_hint">"What it\'s worth ?"</string>
    <string name="enter_note_hint">"Please enter a note"</string>
    <string name="drawer_top_title_text">"Coins</string>
    <string name="title_activity_analytics">Analytics</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="account_delete_title">Dump</string>
    <string name="title_analytics_by_date">By Date</string>
    <string name="title_analytics_by_category">By Category</string>
    <string name="title_analytics_general">General</string>
    <string name="title_activity_month_analytics">MonthAnalytics</string>
    <string name="title_analytics_month_overview">Monthly Report</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="revenues_string">Revenues</string>
    <string name="revenue_string">Earned</string>
    <string name="profits_string">Profits</string>
    <string name="spending_string">Spending</string>
    <string name="spent_string">Spent</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_activity_user_account">Account</string>
    <string name="checkbox_saved">Faved</string>
    <string name="checkbox_save">Favorite</string>
    <string name="checkbox_wallet_shared">Shared</string>
    <string name="checkbox_wallet_share">Share</string>
    <string name="title_expense_detail_page">Details</string>
    <string name="wallet_detail_page">Wallet</string>
    <string name="title_expense_options_page">Reoccurring</string>
    <string name="title_expense_reuse">Save for Future Use</string>
    <string name="title_expense_repeat">Repeat Every…</string>
    <string name="change_info_hint">Tap below details to change them</string>
    <string name="account_title_text">Account</string>
    <string name="title_activity_graph">Stats</string>
    <string name="repeat_button_text">Done !</string>
    <string name="repeat_options_text">Repeat Options</string>
    <string name="delete_account_first_text">We don\'t wannna lose you</string>
    <string name="delete_account_second_text">Deleting the account will lose all your info</string>
    <string name="pick_year_message">Please pick the year to jump to</string>
    <string name="title_activity_faviorte">Favorites</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="welcome_sample_text">Use your "Favorites" to create new transactions in a pinch</string>
    <string name="title_activity_wallet">Wallet</string>
    <string name="title_activity_wallet_image_picker">Image Pick</string>

</resources>
