<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/signUpMainImage"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/padding_start_currency"
            android:src="@drawable/sign_up"/>

        <TextView
            android:id="@+id/sign_up_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/expense_drawable_left_pad"
            android:text="@string/signup_welcome"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/tiny_font"/>

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/email"
            android:drawablePadding="@dimen/drawable_left_pad"
            android:hint="@string/Email"
            android:padding="@dimen/drawable_left_pad"
            android:textColorHint="#bbbbbb"/>

        <EditText
            android:id="@+id/passEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-2dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/lock_min"
            android:drawablePadding="@dimen/drawable_left_pad"
            android:hint="@string/password_hint"
            android:padding="@dimen/drawable_left_pad"
            android:password="true"
            android:textColorHint="#bbbbbb"/>

        <EditText
            android:id="@+id/passVerifyEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/drawable_left_pad"
            android:layout_marginTop="-2dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/lock_min"
            android:drawablePadding="@dimen/drawable_left_pad"
            android:hint="@string/verify_pass_hint"
            android:padding="@dimen/drawable_left_pad"
            android:password="true"
            android:textColorHint="#bbbbbb"/>

        <Button
            android:id="@+id/confirm_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/stanard_button_drawable"
            android:padding="10dp"
            android:text="@string/action_sing_up"
            android:textColor="@android:color/white"
            />
    </LinearLayout>

</RelativeLayout>