<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/background"
              android:clipToPadding="false"
              android:gravity="center"
              android:orientation="vertical"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
    >

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:scrollbars="none"
        >

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="6"
            >

            <com.moneyifyapp.views.ThinTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/expense_drawable_left_pad"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/mongo_font"
                />

            <com.moneyifyapp.views.ThinTextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/login_welcome_2nd_line"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/tiny_font"
                />


            <ImageView
                android:id="@+id/accountMainImage"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:contentDescription="Main image"
                android:scaleType="fitCenter"
                android:src="@drawable/coin_large"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:layout_below="@+id/month_analytics_top_layout"
                android:layout_marginBottom="@dimen/drawable_left_pad"
                android:layout_marginEnd="@dimen/big_padding"
                android:layout_marginStart="@dimen/big_padding"
                android:layout_marginTop="@dimen/drawable_left_pad"
                android:background="@android:color/darker_gray"
                />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <LinearLayout
                    android:id="@+id/loginbox_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/big_padding"
                    android:layout_marginRight="@dimen/big_padding"
                    android:layout_weight="4"
                    android:background="@drawable/card"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/big_padding"
                    android:paddingLeft="@dimen/drawable_left_pad"
                    android:paddingRight="@dimen/drawable_left_pad"
                    android:paddingTop="@dimen/drawable_left_pad"
                    >

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:drawableLeft="@drawable/email"
                        android:drawablePadding="@dimen/drawable_left_pad"
                        android:hint="@string/prompt_email"
                        android:imeActionId="@+id/next"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:padding="@dimen/drawable_left_pad"
                        android:singleLine="true"
                        />

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:drawableLeft="@drawable/lock_min"
                        android:drawablePadding="@dimen/drawable_left_pad"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:padding="@dimen/drawable_left_pad"
                        android:singleLine="true"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical"
                        >

                        <Button
                            android:id="@+id/email_sign_in_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:background="@drawable/stanard_button_drawable"
                            android:text="@string/action_sign_in"
                            android:textColor="@android:color/white"
                            android:textStyle="bold"/>

                        <Button
                            android:id="@+id/sign_up_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:background="@drawable/stanard_button_drawable"
                            android:text="@string/action_sing_up"
                            android:textColor="@android:color/white"
                            android:textStyle="bold"/>

                        <Button
                            android:id="@+id/forgot_button"
                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:background="@drawable/template_background"
                            android:text="@string/action_forgot_pass"
                            android:padding="@dimen/padding_start_currency"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/tiny_font"
                            android:textStyle="bold"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>



