<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@android:color/transparent"
    >

    <LinearLayout
        android:id="@+id/dialog_root_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginRight="@dimen/big_padding"
        android:layout_marginLeft="@dimen/big_padding"
        android:layout_marginTop="@dimen/mongo_padding"
        android:layout_marginBottom="@dimen/big_padding"
        android:background="@drawable/card"
        android:orientation="vertical"
        android:paddingBottom="@dimen/big_padding"
        android:paddingLeft="@dimen/drawable_left_pad"
        android:paddingRight="@dimen/drawable_left_pad"
        android:paddingTop="@dimen/big_padding"
        >

        <com.moneyifyapp.views.ThinEditText
            android:id="@+id/change_password_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/lock_min"
            android:drawablePadding="@dimen/drawable_left_pad"
            android:hint="@string/new_password_hint"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:padding="@dimen/drawable_left_pad"
            android:singleLine="true"
            android:textColorHint="#bbbbbb"
            android:textSize="@dimen/large_font"/>

        <com.moneyifyapp.views.ThinEditText
            android:id="@+id/change_password_repeat_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/lock_min"
            android:drawablePadding="@dimen/drawable_left_pad"
            android:hint="@string/new_password_repeat_hint"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:padding="@dimen/drawable_left_pad"
            android:singleLine="true"
            android:textColorHint="#bbbbbb"
            android:textSize="@dimen/large_font"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/change_password_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/expense_drawable_left_pad"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:background="@drawable/stanard_button_drawable"
                android:padding="@dimen/drawable_left_pad"
                android:text="@string/item_details_cancel"
                android:textColor="@android:color/white"
                android:textSize="@dimen/medium_font"
                />

            <Button
                android:id="@+id/change_password_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/expense_drawable_left_pad"
                android:layout_marginLeft="@dimen/drawable_left_pad"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:background="@drawable/stanard_button_drawable"
                android:padding="@dimen/drawable_left_pad"
                android:text="@string/new_password_change_button_text"
                android:textColor="@android:color/white"
                android:textSize="@dimen/medium_font"
                />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
